# rcron

./: Cargo.toml  README.md  cargo.io.sh  example.crontab  init.sh
locales/: en-us.yaml  zh-tw.yaml
src/: i18n.rs  lib.rs  main.rs
