[package]
name = "rcron"
version = "0.1.0"
edition = "2024"
authors = ["Carson <jackparadise520a@gmail.com>"]

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
cron = "0.15.0"
daemonize = "0.5.0"
env_logger = "0.11.9"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full", "signal"] }
toml = "1.0.6"
