[package]
name = "rcrontab" # rcron已經被使用
version = "0.1.0"
edition = "2024"

authors = ["Carson <jackparadise520a@gmail.com>"]
repository = "https://github.com/CarsonSlovoka/rcron"
# documentation = "https://docs.rs/..."
license = "MIT"
readme = "README.md" # 也可以考慮寫一個crates-io-readme.md
# exclude = ["/screenshot.png", "..."]
description = """
emoji. Scheduling tools for setting periodic automatic execution tasks
"""
# homepage = "https://..."
keywords = ["command-line", "task", "crontab", "schedule", "notify"] # 最多5個, 不然會得到錯誤: `expected at most 5 keywords per crate`
categories = ["command-line-utilities"]
rust-version = "1.94.0"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
cron = "0.15.0"
daemonize = "0.5.0"
env_logger = "0.11.9"
log = "0.4.29"
rust-i18n = "3.1.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sys-locale = "0.3.2"
tokio = { version = "1.50.0", features = ["full", "signal"] }
toml = "1.0.6"
